Completed extraction, embeddings, and feature inference parts of pipeline

--- a/data_extraction/valence_length_analysis.ipynb
+++ b/data_extraction/valence_length_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,6 +25,378 @@
     "from utils import Serialization\n",
     "\n",
     "tqdm.pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROOT_DIR = \"/ais/hal9000/datasets/reddit/stance_analysis/\"\n",
+    "files = list(os.walk(ROOT_DIR))\n",
+    "df = pd.read_json(files[1][0] + \"/aa\", lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author</th>\n",
+       "      <th>body</th>\n",
+       "      <th>controversiality</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>id</th>\n",
+       "      <th>parent_id</th>\n",
+       "      <th>score</th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>author_flair_text</th>\n",
+       "      <th>author_flair_css_class</th>\n",
+       "      <th>BF</th>\n",
+       "      <th>BF_markers</th>\n",
+       "      <th>BF_EX</th>\n",
+       "      <th>BF_EX_markers</th>\n",
+       "      <th>DA</th>\n",
+       "      <th>DA_markers</th>\n",
+       "      <th>DA_EX</th>\n",
+       "      <th>DA_EX_markers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TheSituasian</td>\n",
+       "      <td>It was supposed to be Ahri...........</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1396310400</td>\n",
+       "      <td>cggwbpx</td>\n",
+       "      <td>t3_21v3gc</td>\n",
+       "      <td>3</td>\n",
+       "      <td>leagueoflegends</td>\n",
+       "      <td>[mikekim] (NA)</td>\n",
+       "      <td>33 team</td>\n",
+       "      <td>1</td>\n",
+       "      <td>supposed</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>soitgoes93</td>\n",
+       "      <td>Just a guess, but, Germany?</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1396310400</td>\n",
+       "      <td>cggwbpy</td>\n",
+       "      <td>t1_cggtzi3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>AskMen</td>\n",
+       "      <td>♂</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>just</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Stinky-pickle</td>\n",
+       "      <td>That would have been a goal if it wasn't for T...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1396310400</td>\n",
+       "      <td>cggwbq2</td>\n",
+       "      <td>t3_21vc3k</td>\n",
+       "      <td>3</td>\n",
+       "      <td>hockey</td>\n",
+       "      <td>OTTAlt2NHL</td>\n",
+       "      <td>OTTAlt2NHL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>would</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>UCSp1tF1r3</td>\n",
+       "      <td>I sent you a friend request, my steam name is ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1396310400</td>\n",
+       "      <td>cggwbq3</td>\n",
+       "      <td>t1_cggcwfz</td>\n",
+       "      <td>1</td>\n",
+       "      <td>DotA2</td>\n",
+       "      <td></td>\n",
+       "      <td>traxex</td>\n",
+       "      <td>1</td>\n",
+       "      <td>seem__like__can__really__hope__would</td>\n",
+       "      <td>1</td>\n",
+       "      <td>pretty__although</td>\n",
+       "      <td>1</td>\n",
+       "      <td>like__right__really__my</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>valoirlecoup</td>\n",
+       "      <td>Yeah it sucked, but it was over three years ag...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1396310400</td>\n",
+       "      <td>cggwbq4</td>\n",
+       "      <td>t1_cggw9gh</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Unexpected</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>yeah</td>\n",
+       "      <td>1</td>\n",
+       "      <td>yeah</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499995</th>\n",
+       "      <td>ishyman</td>\n",
+       "      <td>shitty LPT- do it while your iron is hot to ma...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1396369982</td>\n",
+       "      <td>cghex12</td>\n",
+       "      <td>t1_cggpu0f</td>\n",
+       "      <td>1</td>\n",
+       "      <td>AskReddit</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>sure</td>\n",
+       "      <td>1</td>\n",
+       "      <td>shitty</td>\n",
+       "      <td>1</td>\n",
+       "      <td>sure</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499996</th>\n",
+       "      <td>Ripper62</td>\n",
+       "      <td>you may as well be using a mana addict if you ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1396369981</td>\n",
+       "      <td>cghex13</td>\n",
+       "      <td>t1_cggl5bv</td>\n",
+       "      <td>1</td>\n",
+       "      <td>hearthstone</td>\n",
+       "      <td></td>\n",
+       "      <td>hogger</td>\n",
+       "      <td>1</td>\n",
+       "      <td>may__can__really__could</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>now__so__really__well</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499997</th>\n",
+       "      <td>ParisPC07</td>\n",
+       "      <td>Everyone can't have equal rights in a capitali...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1396369982</td>\n",
+       "      <td>cghex15</td>\n",
+       "      <td>t1_cggke58</td>\n",
+       "      <td>2</td>\n",
+       "      <td>bestof</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>will</td>\n",
+       "      <td>1</td>\n",
+       "      <td>always</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>always</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499998</th>\n",
+       "      <td>tedstery</td>\n",
+       "      <td>Welp. No word on their twitter either.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1396369982</td>\n",
+       "      <td>cghex17</td>\n",
+       "      <td>t3_21xnxu</td>\n",
+       "      <td>1</td>\n",
+       "      <td>elderscrollsonline</td>\n",
+       "      <td>Daggerfall Covenant</td>\n",
+       "      <td>daggerfall</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499999</th>\n",
+       "      <td>MrDongji</td>\n",
+       "      <td>Stated by the OP, April 1st.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1396369982</td>\n",
+       "      <td>cghex1b</td>\n",
+       "      <td>t1_cgheryj</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Sneakers</td>\n",
+       "      <td></td>\n",
+       "      <td>jordan1bred</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>stated</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500000 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               author                                               body  \\\n",
+       "0        TheSituasian              It was supposed to be Ahri...........   \n",
+       "1          soitgoes93                        Just a guess, but, Germany?   \n",
+       "2       Stinky-pickle  That would have been a goal if it wasn't for T...   \n",
+       "3          UCSp1tF1r3  I sent you a friend request, my steam name is ...   \n",
+       "4        valoirlecoup  Yeah it sucked, but it was over three years ag...   \n",
+       "...               ...                                                ...   \n",
+       "499995        ishyman  shitty LPT- do it while your iron is hot to ma...   \n",
+       "499996       Ripper62  you may as well be using a mana addict if you ...   \n",
+       "499997      ParisPC07  Everyone can't have equal rights in a capitali...   \n",
+       "499998       tedstery             Welp. No word on their twitter either.   \n",
+       "499999       MrDongji                      Stated by the OP, April 1st.    \n",
+       "\n",
+       "        controversiality  created_utc       id   parent_id  score  \\\n",
+       "0                      1   1396310400  cggwbpx   t3_21v3gc      3   \n",
+       "1                      0   1396310400  cggwbpy  t1_cggtzi3      4   \n",
+       "2                      0   1396310400  cggwbq2   t3_21vc3k      3   \n",
+       "3                      0   1396310400  cggwbq3  t1_cggcwfz      1   \n",
+       "4                      0   1396310400  cggwbq4  t1_cggw9gh     10   \n",
+       "...                  ...          ...      ...         ...    ...   \n",
+       "499995                 0   1396369982  cghex12  t1_cggpu0f      1   \n",
+       "499996                 0   1396369981  cghex13  t1_cggl5bv      1   \n",
+       "499997                 0   1396369982  cghex15  t1_cggke58      2   \n",
+       "499998                 0   1396369982  cghex17   t3_21xnxu      1   \n",
+       "499999                 0   1396369982  cghex1b  t1_cgheryj      0   \n",
+       "\n",
+       "                 subreddit    author_flair_text author_flair_css_class  BF  \\\n",
+       "0          leagueoflegends       [mikekim] (NA)                33 team   1   \n",
+       "1                   AskMen                    ♂                   male   1   \n",
+       "2                   hockey           OTTAlt2NHL             OTTAlt2NHL   1   \n",
+       "3                    DotA2                                      traxex   1   \n",
+       "4               Unexpected                 None                   None   0   \n",
+       "...                    ...                  ...                    ...  ..   \n",
+       "499995           AskReddit                 None                   None   1   \n",
+       "499996         hearthstone                                      hogger   1   \n",
+       "499997              bestof                 None                   None   1   \n",
+       "499998  elderscrollsonline  Daggerfall Covenant             daggerfall   0   \n",
+       "499999            Sneakers                                 jordan1bred   0   \n",
+       "\n",
+       "                                  BF_markers  BF_EX     BF_EX_markers  DA  \\\n",
+       "0                                   supposed      0                     0   \n",
+       "1                                       just      0                     0   \n",
+       "2                                      would      0                     0   \n",
+       "3       seem__like__can__really__hope__would      1  pretty__although   1   \n",
+       "4                                                 1              yeah   1   \n",
+       "...                                      ...    ...               ...  ..   \n",
+       "499995                                  sure      1            shitty   1   \n",
+       "499996               may__can__really__could      0                     1   \n",
+       "499997                                  will      1            always   0   \n",
+       "499998                                            0                     1   \n",
+       "499999                                            1            stated   0   \n",
+       "\n",
+       "                     DA_markers  DA_EX DA_EX_markers  \n",
+       "0                                    0                \n",
+       "1                                    0                \n",
+       "2                                    0                \n",
+       "3       like__right__really__my      0                \n",
+       "4                          yeah      0                \n",
+       "...                         ...    ...           ...  \n",
+       "499995                     sure      0                \n",
+       "499996    now__so__really__well      0                \n",
+       "499997                               1        always  \n",
+       "499998                       no      0                \n",
+       "499999                               0                \n",
+       "\n",
+       "[500000 rows x 18 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -82,7 +454,7 @@
     }
    ],
    "source": [
-    "tmp = df_big[['author', 'subreddit', 'id', 'sens']].reset_index()\n",
+    "tmp = df_big[['author', 'subreddit', 'id', 'sens']].reset_index(drop=True)\n",
     "tmp['rel_marker'] = tmp['sens'].progress_apply(lambda x: extract_relevant_markers(x, rel_markers))\n",
     "tmp['one_marker'] = tmp['rel_marker'].apply(lambda x: len(x) == 1)\n",
     "tmp = tmp[tmp['one_marker']]\n",
