Updated stancemarker code and the visualization for RQ1

--- a/data_extraction/corpus_statistics.ipynb
+++ b/data_extraction/corpus_statistics.ipynb
@@ -22,16 +22,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/jai/miniconda3/envs/venv37/lib/python3.7/site-packages/tqdm/std.py:668: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
-      "  from pandas import Panel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tqdm.pandas()\n",
     "# model = SentenceTransformer(\"bert-large-nli-mean-tokens\")"
@@ -39,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +64,7 @@
        "Text(0.5, 1.0, 'Number of communities with at least n stance marker posts')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -100,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +100,7 @@
        "Text(0.5, 1.0, 'Number of communities with at least n stance marker posts')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -136,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,15 +135,15 @@
     "community_embeddings = pd.read_csv(\"../../AutismHateSpeech/Data/reddit-master-vectors.tsv\", delimiter='\\t', header=None)\n",
     "metadata['community'] = metadata['community'].str.lower()\n",
     "df.index = df.index.str.lower()\n",
-    "top = df[df['body'] >= 10000]\n",
-    "top_5 = top.sample(5, random_state=8)\n",
+    "top = df[df['body'] >= 100000]\n",
+    "top_5 = top.sample(20, random_state=8)\n",
     "idx_to_community = metadata['community'].to_dict()\n",
     "community_to_idx = {idx_to_community[key]:  key for key in idx_to_community}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,38 +184,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original Community: neopets with cos_sim 1.0\n",
-      "Rank 3: ratemymayor with cos_sim 0.56\n",
-      "Rank 4: randomactsofmakeup with cos_sim 0.56\n",
-      "Rank 5: actrade with cos_sim 0.55\n",
-      "Rank 6: adoptmyvillager with cos_sim 0.55\n",
-      "Original Community: snowboarding with cos_sim 1.0\n",
-      "Rank 1: skiing with cos_sim 0.69\n",
-      "Rank 5: skateboarding with cos_sim 0.65\n",
-      "Rank 6: gopro with cos_sim 0.65\n",
-      "Rank 7: surfing with cos_sim 0.62\n",
-      "Original Community: muaythai with cos_sim 1.0\n",
-      "Rank 2: martialarts with cos_sim 0.71\n",
-      "Rank 3: bjj with cos_sim 0.71\n",
-      "Rank 5: mma with cos_sim 0.65\n",
-      "Rank 11: streetfights with cos_sim 0.58\n",
-      "Original Community: scp with cos_sim 1.0\n",
-      "Rank 5: nightvale with cos_sim 0.62\n",
-      "Rank 20: writingprompts with cos_sim 0.59\n",
-      "Rank 22: shortscarystories with cos_sim 0.58\n",
-      "Rank 27: homestuck with cos_sim 0.58\n",
-      "Original Community: gamedev with cos_sim 1.0\n",
-      "Rank 2: unity3d with cos_sim 0.83\n",
-      "Rank 3: indiegaming with cos_sim 0.83\n",
-      "Rank 4: gamedesign with cos_sim 0.82\n",
-      "Rank 16: pixelart with cos_sim 0.71\n"
+      "Original Community: photoshopbattles with cos_sim 1.0\n",
+      "Rank 2: gifs with cos_sim 0.76\n",
+      "Rank 3: mildlyinteresting with cos_sim 0.75\n",
+      "Rank 5: woahdude with cos_sim 0.73\n",
+      "Rank 18: reactiongifs with cos_sim 0.69\n",
+      "Original Community: seattle with cos_sim 1.0\n",
+      "Rank 8: seahawks with cos_sim 0.69\n",
+      "Rank 22: portland with cos_sim 0.48\n",
+      "Rank 30: mls with cos_sim 0.46\n",
+      "Rank 55: okcupid with cos_sim 0.44\n",
+      "Original Community: buildapc with cos_sim 1.0\n",
+      "Rank 9: hardwareswap with cos_sim 0.73\n",
+      "Rank 10: pcmasterrace with cos_sim 0.72\n",
+      "Rank 13: battlestations with cos_sim 0.71\n",
+      "Rank 14: techsupport with cos_sim 0.7\n",
+      "Original Community: suicidewatch with cos_sim 1.0\n",
+      "Rank 1: depression with cos_sim 0.8\n",
+      "Rank 17: offmychest with cos_sim 0.63\n",
+      "Rank 35: amiugly with cos_sim 0.57\n",
+      "Rank 37: nosleep with cos_sim 0.57\n",
+      "Original Community: fantasybaseball with cos_sim 1.0\n",
+      "Rank 1: baseball with cos_sim 0.74\n",
+      "Rank 3: fantasyfootball with cos_sim 0.7\n",
+      "Rank 19: cardinals with cos_sim 0.57\n",
+      "Rank 25: nfl with cos_sim 0.56\n",
+      "Original Community: steamgameswap with cos_sim 1.0\n",
+      "Rank 8: steam with cos_sim 0.74\n",
+      "Rank 13: gamedeals with cos_sim 0.72\n",
+      "Rank 21: globaloffensivetrade with cos_sim 0.66\n",
+      "Rank 28: hardwareswap with cos_sim 0.63\n",
+      "Original Community: woodworking with cos_sim 1.0\n",
+      "Rank 2: diy with cos_sim 0.77\n",
+      "Rank 55: whatisthisthing with cos_sim 0.58\n",
+      "Rank 107: justrolledintotheshop with cos_sim 0.54\n",
+      "Rank 123: pics with cos_sim 0.54\n",
+      "Original Community: books with cos_sim 1.0\n",
+      "Rank 14: fantasy with cos_sim 0.66\n",
+      "Rank 15: writing with cos_sim 0.66\n",
+      "Rank 16: television with cos_sim 0.66\n",
+      "Rank 17: music with cos_sim 0.65\n",
+      "Original Community: military with cos_sim 1.0\n",
+      "Rank 27: guns with cos_sim 0.57\n",
+      "Rank 33: protectandserve with cos_sim 0.55\n",
+      "Rank 77: askhistorians with cos_sim 0.47\n",
+      "Rank 110: warthunder with cos_sim 0.45\n",
+      "Original Community: heroesofthestorm with cos_sim 1.0\n",
+      "Rank 3: hearthstone with cos_sim 0.72\n",
+      "Rank 5: wow with cos_sim 0.66\n",
+      "Rank 9: diablo with cos_sim 0.63\n",
+      "Rank 10: diablo3 with cos_sim 0.63\n",
+      "Original Community: talesfromtechsupport with cos_sim 1.0\n",
+      "Rank 4: talesfromretail with cos_sim 0.73\n",
+      "Rank 13: sysadmin with cos_sim 0.66\n",
+      "Rank 32: justrolledintotheshop with cos_sim 0.57\n",
+      "Rank 40: linux with cos_sim 0.54\n",
+      "Original Community: titanfall with cos_sim 1.0\n",
+      "Rank 2: xboxone with cos_sim 0.65\n",
+      "Rank 5: destinythegame with cos_sim 0.63\n",
+      "Rank 6: codaw with cos_sim 0.63\n",
+      "Rank 16: battlefield_4 with cos_sim 0.59\n",
+      "Original Community: percyjacksonrp with cos_sim 1.0\n",
+      "Rank 7: teenagers with cos_sim 0.51\n",
+      "Rank 8: frozen with cos_sim 0.5\n",
+      "Rank 10: whowouldwin with cos_sim 0.5\n",
+      "Rank 15: polandball with cos_sim 0.49\n",
+      "Original Community: globaloffensivetrade with cos_sim 1.0\n",
+      "Rank 2: csgobetting with cos_sim 0.79\n",
+      "Rank 3: globaloffensive with cos_sim 0.78\n",
+      "Rank 16: steamgameswap with cos_sim 0.66\n",
+      "Rank 45: hardwareswap with cos_sim 0.58\n",
+      "Original Community: worldnews with cos_sim 1.0\n",
+      "Rank 1: news with cos_sim 0.77\n",
+      "Rank 2: todayilearned with cos_sim 0.74\n",
+      "Rank 3: science with cos_sim 0.74\n",
+      "Rank 5: nottheonion with cos_sim 0.7\n",
+      "Original Community: australia with cos_sim 1.0\n",
+      "Rank 1: melbourne with cos_sim 0.8\n",
+      "Rank 3: sydney with cos_sim 0.78\n",
+      "Rank 8: afl with cos_sim 0.72\n",
+      "Rank 13: nrl with cos_sim 0.7\n",
+      "Original Community: music with cos_sim 1.0\n",
+      "Rank 2: iama with cos_sim 0.74\n",
+      "Rank 4: pics with cos_sim 0.72\n",
+      "Rank 7: videos with cos_sim 0.7\n",
+      "Rank 8: movies with cos_sim 0.68\n",
+      "Original Community: steroids with cos_sim 1.0\n",
+      "Rank 3: bodybuilding with cos_sim 0.77\n",
+      "Rank 11: fitness with cos_sim 0.64\n",
+      "Rank 16: darknetmarkets with cos_sim 0.61\n",
+      "Rank 18: theredpill with cos_sim 0.6\n",
+      "Original Community: showerthoughts with cos_sim 1.0\n",
+      "Rank 1: jokes with cos_sim 0.89\n",
+      "Rank 2: mildlyinteresting with cos_sim 0.86\n",
+      "Rank 4: lifeprotips with cos_sim 0.8\n",
+      "Rank 5: tifu with cos_sim 0.8\n",
+      "Original Community: askwomen with cos_sim 1.0\n",
+      "Rank 1: askmen with cos_sim 0.77\n",
+      "Rank 6: makeupaddiction with cos_sim 0.7\n",
+      "Rank 10: femalefashionadvice with cos_sim 0.69\n",
+      "Rank 11: relationships with cos_sim 0.68\n"
      ]
     }
    ],
@@ -252,16 +318,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "freqs = df.loc[final_comm_set]"
+    "freqs = df.loc[set(final_comm_set)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>body</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>subreddit</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>suicidewatch</th>\n",
+       "      <td>100201.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>whatisthisthing</th>\n",
+       "      <td>100575.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fantasybaseball</th>\n",
+       "      <td>100979.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>photoshopbattles</th>\n",
+       "      <td>102144.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>jokes</th>\n",
+       "      <td>105201.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>todayilearned</th>\n",
+       "      <td>2613678.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nfl</th>\n",
+       "      <td>2633914.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>videos</th>\n",
+       "      <td>2833531.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>worldnews</th>\n",
+       "      <td>3197463.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pics</th>\n",
+       "      <td>3486147.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>92 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       body\n",
+       "subreddit                  \n",
+       "suicidewatch       100201.0\n",
+       "whatisthisthing    100575.0\n",
+       "fantasybaseball    100979.0\n",
+       "photoshopbattles   102144.0\n",
+       "jokes              105201.0\n",
+       "...                     ...\n",
+       "todayilearned     2613678.0\n",
+       "nfl               2633914.0\n",
+       "videos            2833531.0\n",
+       "worldnews         3197463.0\n",
+       "pics              3486147.0\n",
+       "\n",
+       "[92 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freqs.sort_values(by='body')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
