--- a/semantic_space/test_clustering.ipynb
+++ b/semantic_space/test_clustering.ipynb
@@ -4213,7 +4213,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.9 ('venv37')",
+   "display_name": "Python 3.6.2 ('BGP_venv')",
    "language": "python",
    "name": "python3"
   },
@@ -4227,12 +4227,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.6.2"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3da9994af9e3093f34be5556416449be7c3908df46ffc29ccdba7bd3fd3a7b92"
+    "hash": "80932d381690da30b9358f344178503845394e322c86997319184daf72c99e75"
    }
   }
  },
